sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  { 
	var swapped =true 
	while{
	 for(i=0 to grandvaleur[j-1])
	if{ plusPetit(i,j)=false
	echange(i,j)
	else{plusPetitQue(i,j)}
	}
	}
}
